# Open-Tag-Reader

.github/: copilot-instructions.md
Code/OTR-AMOLED-Plus/: .gitignore  OTR_AMOLED_UITEST.sll  OTR_AMOLED_UITEST.spj  OTR_AMOLED_UITEST_events.py  SquareLine_Project_Example_UI_events.py  otrT_Display_data_layout.drawio  platformio.ini
Code/OTR-AMOLED-Plus/assets/: ui_font_BIG.fcfg
Code/OTR-AMOLED-Plus/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
Code/OTR-AMOLED-Plus/src/ui/components/: ui_comp_hook.c
Code/OTR-AMOLED-Plus/src/ui/fonts/: ui_font_BIG.c
Code/OTR-AMOLED-Plus/src/ui/images/: ui_img_add_circle_png.c  ui_img_arrow_back_png.c  ui_img_battery_1_bar_png.c  ui_img_battery_2_bar_png.c  ui_img_battery_3_bar_png.c  ui_img_battery_4_bar_png.c  ui_img_battery_5_bar_png.c  ui_img_battery_alert_png.c  ui_img_battery_charging_full_png.c  ui_img_battery_full_png.c  ui_img_bluetooth_disabled_png.c  ui_img_bluetooth_png.c  ui_img_cancel_png.c  ui_img_contactless_off_png.c  ui_img_contactless_png.c  ui_img_sd_card_png.c  ui_img_settings_png.c  ui_img_turn_left_200dp_1f1f1f_fill0_wght700_grad0_opsz48_png.c  ui_img_volume_down_png.c  ui_img_volume_off_png.c  ui_img_volume_up_png.c  ui_img_wifi_off_png.c  ui_img_wifi_png.c  ui_img_wifi_tethering_off_png.c  ui_img_wifi_tethering_png.c
Code/OTR-AMOLED-Plus/src/ui/screens/: ui_Main.c  ui_Records.c  ui_Session.c  ui_SetTime.c  ui_Settings.c  ui_Tagging.c  ui_Time.c
Roadmap/: Roadmap.md
build_instructions/: build_instructions.md
tools/: migrate_animals_csv.py
(+39 files in other folders)
